# ESP-IDF-InkPlate

./: CHANGES.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  library.json  licenses.txt
doc/: arduino-version.pu  esp-idf-version.pu  test.pu
include/drivers/: back_light.hpp  backlight.hpp  battery.hpp  eink.hpp  eink_10.hpp  eink_6.hpp  eink_6flick.hpp  eink_6plus.hpp  eink_6plus_v2.hpp  frame_buffer.hpp  front_light.hpp  inkplate_platform.hpp  mcp23017.hpp  nvs_mgr.hpp  pcal6416.hpp  press_keys.hpp  rtc_pcf85063.hpp  sd_card.hpp  touch_keys.hpp  touch_screen.cpp  touch_screen.hpp
include/graphical/: glcd_font.hpp  graphics.hpp  image.hpp  inkplate.hpp  stdlib_noniso.hpp  tjpgd.hpp
include/services/: esp.hpp  i2s_comms.hpp  network_client.hpp  sd_card.hpp  timegm.hpp  wire.hpp
lib/drivers/: library.json
lib/graphical/: library.json
lib/inkplate/: library.json
lib/services/: library.json
lib/tools/: library.json
src/: CMakeLists.txt  main.cpp
src/drivers/: PCAL6416.cpp  back_light.cpp  backlight.cpp  battery.cpp  battery.hpp  eink.cpp  eink.hpp  eink_10.cpp  eink_10.hpp  eink_6.cpp  eink_6.hpp  eink_6flick.cpp  eink_6flick.hpp  eink_6plus.cpp  eink_6plus_v2.cpp  eink_6plus_v2.hpp  frame_buffer.hpp  front_light.cpp  front_light.hpp  inkplate_platform.cpp  inkplate_platform.hpp  mcp23017.cpp  mcp23017.hpp  nvs_mgr.cpp  pcal6416.cpp  pcal6416.hpp  press_keys.cpp  press_keys.hpp  rtc_pcf85063.cpp  rtc_pcf85063.hpp  sd_card.cpp  sd_card.hpp  touch_keys.cpp  touch_screen.cpp  touch_screen.hpp  touch_screen_cypress.cpp  touch_screen_cypress.hpp  touch_screen_elan.cpp  touch_screen_elan.hpp
src/graphical/: adafruit_gfx.hpp  gfx_font.hpp  graphics.cpp  image.cpp  image.hpp  (+9 more)
(+104 files in other folders)
